<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/timeImageView"
            android:layout_width="373dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:contentDescription="@string/clock_image"
            android:layout_marginTop="16dp"
            android:layout_weight="2"
            android:padding="22dp"
            android:src="@drawable/stopwatch"
            app:tint="#515151" />

        <androidx.cardview.widget.CardView
            android:id="@+id/scoreCardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:elevation="12dp"
            app:cardCornerRadius="8dp"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="274dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/yourScoreTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="center"
                android:padding="26dp"
                android:text="@string/your_score_1_d"
                android:textSize="22sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp"
            android:elevation="12dp"
            tools:layout_editor_absoluteX="48dp"
            tools:layout_editor_absoluteY="392dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/timeLeftTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/product_sans_regular"
                android:gravity="center"
                android:padding="26dp"
                android:text="@string/time_left_1_d"
                android:textSize="22sp" />


        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tapMeButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center"
            android:text="@string/tap_me"
            app:cornerRadius="18dp" />

    </LinearLayout>

</layout>